--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <script src="res/lib/underscore-min.js"></script>
 
     <script src="res/js/Grid.js"></script>
+    <script src="res/js/Input.js"></script>
+    <script src="res/js/Player.js"></script>
     <script src="res/js/Positionable.js"></script>
     <script src="res/js/RTS.js"></script>
     <script src="res/js/Sprite.js"></script>
