Added CSS to index

--- a/index.html
+++ b/index.html
@@ -8,14 +8,18 @@
 
     <script src="res/js/Grid.js"></script>
     <script src="res/js/Resource.js"></script>
+    <script src="res/js/Ticker.js"></script>
     <script src="res/js/Input.js"></script>
     <script src="res/js/Player.js"></script>
     <script src="res/js/Positionable.js"></script>
     <script src="res/js/RTS.js"></script>
+    <script src="res/js/Canvas.js"></script>
     <script src="res/js/Sprite.js"></script>
     <script src="res/js/Terrain.js"></script>
     <script src="res/js/TerrainPaint.js"></script>
     <script src="res/js/Unit.js"></script>
+
+    <link rel="stylesheet" href="res/css/page.css" type="text/css" />
 
   </head>
 
