--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
 
   </head>
 
-  <body>
+  <body />
 
-  </body>
+  <script type="text/javascript">
+    (new RTS().start());
+  </script>
+
 </html>
