--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="res/js/Terrain.js"></script>
     <script src="res/js/TerrainPaint.js"></script>
     <script src="res/js/Unit.js"></script>
+    <script src="res/js/Game.js"></script>
 
     <link rel="stylesheet" href="res/css/page.css" type="text/css" />
 
