--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
     <script src="res/lib/klass.min.js"></script>
     <script src="res/lib/underscore-min.js"></script>
 
-    <script src="res/js/Grid.js"></script>
-    <script src="res/js/Resource.js"></script>
-    <script src="res/js/Ticker.js"></script>
-    <script src="res/js/Input.js"></script>
-    <script src="res/js/Player.js"></script>
-    <script src="res/js/Positionable.js"></script>
-    <script src="res/js/RTS.js"></script>
-    <script src="res/js/Canvas.js"></script>
-    <script src="res/js/Sprite.js"></script>
-    <script src="res/js/Terrain.js"></script>
-    <script src="res/js/TerrainPaint.js"></script>
-    <script src="res/js/Unit.js"></script>
-    <script src="res/js/Game.js"></script>
+    <script src="res/js/core/Grid.js"></script>
+    <script src="res/js/core/Resource.js"></script>
+    <script src="res/js/core/Ticker.js"></script>
+    <script src="res/js/core/Input.js"></script>
+    <script src="res/js/core/Player.js"></script>
+    <script src="res/js/core/Positionable.js"></script>
+    <script src="res/js/game/RTS.js"></script>
+    <script src="res/js/core/Canvas.js"></script>
+    <script src="res/js/core/Sprite.js"></script>
+    <script src="res/js/core/Terrain.js"></script>
+    <script src="res/js/core/TerrainPaint.js"></script>
+    <script src="res/js/core/Unit.js"></script>
+    <script src="res/js/game/Game.js"></script>
 
     <link rel="stylesheet" href="res/css/page.css" type="text/css" />
 
