--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <script src="res/js/core/TerrainPaint.js"></script>
     <script src="res/js/core/Unit.js"></script>
     <script src="res/js/game/Game.js"></script>
+    <script src="res/js/map-maker/MapMaker.js"></script>
+    <script src="res/js/map-maker/PaintBucket.js"></script>
 
     <link rel="stylesheet" href="res/css/page.css" type="text/css" />
 
@@ -27,7 +29,7 @@
   <body />
 
   <script type="text/javascript">
-    (new RTS().start());
+    (new MapMaker().start());
   </script>
 
 </html>
