Map maker starting to take shape.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 
     <script src="res/lib/klass.min.js"></script>
     <script src="res/lib/underscore-min.js"></script>
+    <script src="res/lib/jquery.min.js"></script>
+    <script type="text/javascript">$=jQuery;</script>
 
     <script src="res/js/core/Grid.js"></script>
     <script src="res/js/core/Resource.js"></script>
