--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="res/js/core/Resource.js"></script>
     <script src="res/js/core/Ticker.js"></script>
     <script src="res/js/core/Input.js"></script>
+    <script src="res/js/core/MapState.js"></script>
     <script src="res/js/core/Player.js"></script>
     <script src="res/js/core/Positionable.js"></script>
     <script src="res/js/game/RTS.js"></script>
