Made the map loading/saving work with console.

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
   <body />
 
   <script type="text/javascript">
-//    (new MapMaker().start());
-    (new Game().start());
+    (new MapMaker().start());
+//    (new Game().start());
   </script>
 
 </html>
